# evse_interlock

./: .gitignore  .gitmodules  CODEX_HANDOFF.md  README.md  SECURITY.md  west.yml
.github/workflows/: zephyr-unit-tests.yml
app/evse_interlock_v1/: CMakeLists.txt  Kconfig  Kconfig.sysbuild  prj.conf  prj_release.conf
app/evse_interlock_v1/config/config/: pm_static_rak4631_nrf52840.yml
app/evse_interlock_v1/config/overlays/: mcuboot_ext_flash.overlay  overlay-gpio-test.conf  overlay-sidewalk_logging_v1.conf  rak4631.overlay  rak4631_nrf52840.overlay
app/evse_interlock_v1/docs/: TESTING.md
app/evse_interlock_v1/include/: time_sync.h
app/evse_interlock_v1/include/cli/: app_shell.h
app/evse_interlock_v1/patches/: sidewalk-ble-off.patch
app/evse_interlock_v1/src/: evse.c  gpio_event.c  time_sync.c
app/evse_interlock_v1/src/cli/: app_shell.c
app/evse_interlock_v1/src/main/: app.c  app_ble_auth.c  app_ble_auth.h  app_buttons.c  app_buttons.h  app_evse.c  app_evse.h  app_gpio.c  app_gpio.h  app_line_current.c  app_line_current.h  main.c  rtt_heartbeat.c  rtt_heartbeat.h
app/evse_interlock_v1/src/safety_gate/: safety_gate.c  safety_gate.h
app/evse_interlock_v1/src/sidewalk/: sidewalk.c  sidewalk.h  sidewalk_events.c  sidewalk_msg.c  time_sync.c  time_sync.h
app/evse_interlock_v1/src/sidewalk/sbdt/: dfu_file_transfer.c  dfu_file_transfer.h
app/evse_interlock_v1/src/telemetry/: evse.c  evse.h  gpio_event.c  gpio_event.h  line_current.c  line_current.h  telemetry.h  telemetry_evse.c  telemetry_evse.h  telemetry_gpio.c  telemetry_gpio.h  telemetry_line_current.c  telemetry_line_current.h
app/evse_interlock_v1/src/test_mode/: app.c  app_dut.c  app_dut.h  app_shell.c  location_shell.c  location_shell_events.c  location_shell_events.h  sbdt_shell.c  sbdt_shell_events.c  sbdt_shell_events.h  sbdt_shell_file_transfer.c
app/evse_interlock_v1/tests/gpio_event/: CMakeLists.txt
app/evse_interlock_v1/tests/host/: telemetry_tests.c
app/evse_interlock_v1/tests/host/fixtures/: telemetry_gpio_uptime.json
app/evse_interlock_v1/tests/safety_gate/: CMakeLists.txt
app/evse_interlock_v1/tests/safety_gate/src/: main.c
app/evse_interlock_v1/tests/telemetry/: CMakeLists.txt
app/evse_interlock_v1/tests/telemetry/gpio_event/: CMakeLists.txt  prj.conf
app/evse_interlock_v1/tests/telemetry/gpio_event/src/: main.c
app/evse_interlock_v1/tests/telemetry/host/: main.c  telemetry_tests.c
app/evse_interlock_v1/tests/telemetry/host/fixtures/: telemetry_gpio_epoch.json  telemetry_gpio_uptime.json
app/evse_interlock_v1/tests/telemetry/src/: main.c
app/evse_interlock_v1/tests/telemetry/telemetry/: CMakeLists.txt
app/evse_interlock_v1/tests/telemetry/telemetry/src/: main.c
app/hello_rtt/: CMakeLists.txt  prj.conf  rtt.conf
app/hello_rtt/src/: main.c
app/sidewalk_end_device/: CMakeLists.txt  Kconfig  TESTING.md  overlay-sidewalk_logging_v1.conf  pm_static_rak4631_nrf52840.yml  sample.yaml
app/sidewalk_end_device/docs/: TESTING.md
app/sidewalk_end_device/include/: evse.h  gpio_event.h  safety_gate.h  time_sync.h
app/sidewalk_end_device/src/: evse.c  gpio_event.c  safety_gate.c  sidewalk_msg.c  sidewalk_msg.h  time_sync.c
cleanup_quarantine/sidewalk_end_device/boards/: rak4631.overlay
docs/: ARCHITECTURE.md  CODEX_HANDOFF.md  HANDOFF_V1.md  KNOWN_GOOD_SETUP.md  PROVISIONING_BATCH.md  SECURITY.md  SETUP.md  TESTING.md  TESTING_PLAN.md  aws_data_model.md  state-machine.md
tests/: capture_rtt_run_id.py  e2e_idempotency_check.sh  e2e_verify_dynamodb.py  mqtt_wait_for_gpio.py  test_e2e_sidewalk.sh  test_hil_gpio.py  test_hil_gpio.sh  test_unit_host.sh  test_zephyr_linux.sh
tools/: aws_cleanup_and_tag.sh  devices_batch.csv.example  e2e_idempotency_check.sh  e2e_verify_dynamodb.py  mqtt_wait_for_run_id.py  provision_batch.py  sidewalk_build_flash.sh  sidewalk_v1_cleanup.sh  sidewalk_v1_create_v2.sh  sidewalk_v1_deploy_lambdas.sh  sidewalk_v1_e2e_cloud_verify.sh  sidewalk_v1_e2e_test.sh  sidewalk_v1_fix_iot_rule_role.sh  sidewalk_v1_monitoring_setup.sh  sidewalk_v1_publish_verify_endpoint.sh  sidewalk_v1_seed_config.sh  sidewalk_v1_seed_config_csv.py  sidewalk_v1_setup.sh  sidewalk_v1_update_lambda_env_v2.sh  sidewalk_v1_verify_archive_s3.sh  sidewalk_v1_verify_stack.sh  sidewalk_v1_verify_v2.sh  site_id_from_address.py  site_id_key.b64.example  test_e2e_sidewalk.sh  test_hil_gpio.py  test_hil_gpio.sh  test_unit.sh  test_unit_host.sh  test_zephyr_linux.sh  west_build_with_patch.sh
tools/aws/setup_v1/: sidewalk_v1_cleanup.sh  sidewalk_v1_create_v2.sh  (+7 more)
tools/sidewalk_v1_lambdas/: archive_device_events.py  debug_query.py  energy_aggregate.py  hvac_energy_calc.py  ingest_device_event.py
(+21 files in other folders)
